# pipelinectl

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  entry_point.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yaml  release.yaml
demo/: demo.tape  setup.sh
demo/mock/: pipelinectl
pipelinectl/: __init__.py  ado_client.py  cli.py  config.py  output.py
pipelinectl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ado_client.py  test_cli.py  test_config.py  test_output.py
